2013-11-03  Araki Ken  <arakiken@users.sf.net>

	* im_ibus.c: ibus 1.5 is supported.

	* ml_term.[ch]: Following functions are changed to macros.
	  ml_term_set_bidi_mode
	  ml_term_set_use_ind
	  ml_term_set_vertical_mode
	  ml_term_set_use_dynamic_comb

	* ml_vt100_parser.[ch]: Following functions are changed to macros.
	  ml_vt100_parser_set_use_char_combining
	  ml_vt100_parser_set_use_multi_col_char
	  ml_vt100_parser_set_logging_vt_seq
	  ml_vt100_parser_set_unicode_policy
	  ml_vt100_parser_set_use_auto_detect

2013-11-03  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c: Auto encoding detection is a little improved.

	* ml_vt100_parser.[ch], ml_term.h, x_screen.c:
	  ml_{term_}reset_pending_vt100_sequence() which resets pending DCS
	  sequence on ESC key is added.

2013-11-02  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c: Minor fixes.

	* mkf_sjis_conv.c: The bug of converting to shift jis is fixed.

	* etc/main, etc/main.ja: Updated.

2013-11-02  Araki Ken  <arakiken@users.sf.net>

	* mlterm.1, README.ja, PROTOCOL: Updated.

	* ml_vt100_parser.c: ESC $ is available on non-ISO2022 encodings
	  such as UTF-8.

	* ml_vt100_parser.[ch], ml_term.h, x_screen_manager.c, x_screen.c,
	  x_main_config.[ch]:
	  "use_auto_detect" and "auto_detect_encodings" options are added.

2013-10-27  Araki Ken  <arakiken@users.sf.net>

	* README.androind: Updated.

	* android/build.sh, Android.mk: Support fribidi.

	* version.h.in: 3.3.0 -> 3.3.0post

2013-10-27  Araki Ken  <arakiken@users.sf.net>

	* 3.3.0 released.
	  (tag "rel-3_3_0")

	* configure.in, mlterm.spec, main/version.h.in,
	  MLTermPty.c, android/jni/version.h, doc/en/ReleaseNote:
	  updated for 3.3.0.

2013-10-26  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c, x_screen.c:
	  OSC 5379 logging_msg, word_separators, use_alt_buffer,
	  use_ansi_colors, unicode_noconv_areas and allow_scp are moved from
	  x_screen.c to ml_vt100_parser.c.

	* MLTermPty.c: