@@ -2,6 +2,7 @@ ver 3.3.1
 * Add "use_auto_detect" and "auto_detect_encodings" options.
 * Support ESC $ on non-ISO2022 encodings such as UTF-8.
 * Reset pending DCS sequence by pressing ESC key.
+* Support iBus 1.5.
 * Bug fixes:
   Fix the bug of convertion to sjis.
 
